refactor: 修改注销方式

--- a/src/ThingsGateway.Admin.Razor/Pages/Index.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/Index.razor
@@ -46,6 +46,8 @@
     </div>
 </div>
 
+    <div class="row g-2 mx-1 form-inline">
+        <div class="col-12  col-md-12 sh">
     <Card IsShadow=true class="m-2 flex-fill" Color="Color.Primary">
         <HeaderTemplate>
             @Localizer["HardwareInfoChart"]
@@ -55,5 +57,7 @@
             <Chart @ref=CPULineChart OnInitAsync="OnCPUInit" Height="var(--line-chart-height)" Width="100%" OnAfterInitAsync="()=>{chartInit=true;return Task.CompletedTask;}" />
         </BodyTemplate>
     </Card>
+    </div>
+    </div>
 #endif
 }
