--- a/src/ThingsGateway.Admin.Razor/Layout/AccessDenied.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/AccessDenied.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Account/AccessDenied"
 @layout BaseLayout
 @namespace ThingsGateway.Admin.Razor
+@using Microsoft.AspNetCore.Authentication.Cookies
+@using Microsoft.AspNetCore.WebUtilities
 @using ThingsGateway.Admin.Application;
 @using ThingsGateway.Core.Extension;
 @using ThingsGateway.Razor
@@ -9,6 +11,20 @@
         <img alt="401" src="@($"{WebsiteConst.DefaultResourceUrl}images/401.png")" style="max-width: 100%;" />
     </div>
     <h5>@Localizer["401"]</h5>
-    <Button class="mt-2" Color="Color.Primary" OnClick=@(()=>NavigationManager.NavigateTo("/"))>@Localizer["Home"]</Button>
+    <div>
+
+    <Button class="mx-2" Color="Color.Primary" OnClick=@(()=>
+            {
+            NavigationManager.NavigateTo(QueryHelpers.AddQueryString(CookieAuthenticationDefaults.LoginPath, new Dictionary<string, string?>
+            {
+            ["ReturnUrl"] = ReturnUrl
+            })
+        );
+            }
+            )>
+        @Localizer["Login"]
+    </Button>
+        <Button class="mx-2" Color="Color.Primary" OnClick=@(()=>NavigationManager.NavigateTo("/"))>@Localizer["Home"]</Button>
+    </div>
 </div>
 
