--- a/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
@@ -48,7 +48,7 @@
                             @* 切换模块 *@
                             <a @onclick="ChoiceModule"><i class="fas fa-arrow-right-arrow-left me-2" />@Localizer["ChoiceModule"]</a>
                             <a @onclick="@OnUserInfoDialog"><i class="fa-solid fa-suitcase me-2"></i>@Localizer["UserCenter"]</a>
-                            <LogoutLink Url=@("api/auth/logout?returnUrl="+NavigationManager.ToBaseRelativePath(NavigationManager.Uri)) />
+                            <a @onclick="@LogoutAsync"><i class="fa-solid fa-key me-2"></i>@Localizer["Logout"]</a>
 
                         </LinkTemplate>
                     </Logout>
