--- a/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
+++ b/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
@@ -26,6 +26,7 @@
        ShowColumnList=ShowColumnList ExtendButtonColumnWidth="@ExtendButtonColumnWidth"
        CustomerSearchModel="CustomerSearchModel" SelectedRows="SelectedRows" ModelEqualityComparer="ModelEqualityComparer!"
        ShowExtendEditButtonCallback="ShowEditButtonCallback!" ShowExtendDeleteButtonCallback="ShowDeleteButtonCallback!"
+       SetRowClassFormatter="SetRowClassFormatter!" OnAfterSaveAsync="OnAfterSaveAsync!" OnAfterDeleteAsync="OnAfterDeleteAsync!"
        OnAfterModifyAsync="OnAfterModifyAsync!" AutoGenerateColumns="AutoGenerateColumns"
        TableToolbarTemplate="TableToolbarTemplate" TableToolbarBeforeTemplate="TableToolbarBeforeTemplate!" TableColumns="TableColumns" EditTemplate="EditTemplate!"
        CustomerSearchTemplate="CustomerSearchTemplate!" RowButtonTemplate="RowButtonTemplate!" BeforeRowButtonTemplate="BeforeRowButtonTemplate!">
