!31 添加ShowExtendEditButtonCallback等 Merge pull request !31 from youthalan/master

--- a/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
+++ b/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
@@ -26,6 +26,8 @@
        ShowColumnList=ShowColumnList ExtendButtonColumnWidth="@ExtendButtonColumnWidth"
        CustomerSearchModel="CustomerSearchModel" SelectedRows="SelectedRows" ModelEqualityComparer="ModelEqualityComparer!"
        ShowExtendEditButtonCallback="ShowEditButtonCallback!" ShowExtendDeleteButtonCallback="ShowDeleteButtonCallback!"
+       DisableExtendEditButton="DisableExtendEditButton!" DisableExtendDeleteButton="DisableExtendDeleteButton!"
+       DisableExtendEditButtonCallback="DisableExtendEditButtonCallback!" DisableExtendDeleteButtonCallback="DisableExtendDeleteButtonCallback!"
        SetRowClassFormatter="SetRowClassFormatter!" OnAfterSaveAsync="OnAfterSaveAsync!" OnAfterDeleteAsync="OnAfterDeleteAsync!"
        OnAfterModifyAsync="OnAfterModifyAsync!" AutoGenerateColumns="AutoGenerateColumns"
        TableToolbarTemplate="TableToolbarTemplate" TableToolbarBeforeTemplate="TableToolbarBeforeTemplate!" TableColumns="TableColumns" EditTemplate="EditTemplate!"
