--- a/src/ThingsGateway.Admin.Razor/Layout/Login.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/Login.razor
@@ -16,7 +16,7 @@
                     <span class="avatar">
                         @WebsiteOption.Value.Title?.GetNameLen2()
                     </span>
-                    <h4>@WebsiteOption.Value.Title</h4>
+                    <h4>@($"{WebsiteOption.Value.Title}   {_versionString}")</h4>
                 </div>
                 <div class="d-flex flex-column align-items-start ms-5 mt-5 mb-auto">
                     <div class="mb-3">
