--- a/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
+++ b/src/adapter/ThingsGateway.Plugin.Modbus/Pages/ModbusSlave.razor
@@ -42,7 +42,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent HeaderText="HeaderText"></AdapterDebugComponent>
+    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent></AdapterDebugComponent>
 </div>
 
 
