--- a/src/adapter/ThingsGateway.Plugin.SiemensS7/Pages/SiemensS7Master.razor
+++ b/src/adapter/ThingsGateway.Plugin.SiemensS7/Pages/SiemensS7Master.razor
@@ -37,7 +37,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent HeaderText="HeaderText"></AdapterDebugComponent>
+    <AdapterDebugComponent Plc=_plc LogPath=@LogPath @ref=AdapterDebugComponent></AdapterDebugComponent>
 </div>
 
 
