fix: 调试工具多读功能寄存器数据类型未绑定

--- a/src/ThingsGateway.Gateway.Razor/DebugPages/AdapterDebugComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/DebugPages/AdapterDebugComponent.razor
@@ -78,7 +78,7 @@
                                     <BootstrapInput @bind-Value=@item.RegisterAddress title="@Plc?.GetAddressDescription()"
                                                     ShowLabel="true" style="width:100%" />
 
-                                    <Select @bind-Value="@DataType" ShowLabel="true" IsPopover />
+                                    <Select @bind-Value="@item.DataType" ShowLabel="true" IsPopover />
                                 </div>
 
                             </div>
