--- a/src/ThingsGateway.Gateway.Razor/DebugPages/LogConsole.razor
+++ b/src/ThingsGateway.Gateway.Razor/DebugPages/LogConsole.razor
@@ -11,6 +11,7 @@
         </div>
         <Button Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(IsPause?"fa fa-play":"fa fa-pause") OnClick="Pause" />
         <Button IsAsync Color="Color.None" style="color: var(--bs-card-title-color);"  Icon=@("fa fa-sign-out") OnClick="HandleOnExportClick" />
+        <Button IsAsync Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("far fa-trash-alt") OnClick="Delete" />
 
     </HeaderTemplate>
     <BodyTemplate>
