--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariablePage.razor
@@ -64,7 +64,7 @@
                                           IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> { await VariableService.ClearVariableAsync();
                                           await InvokeAsync(async()=>
                                           {
-                                          await ToastService.Default(); await table.QueryAsync();
+                                          await ToastService.Default(); await InvokeAsync(table.QueryAsync);
                                           });
                                           });} ) />
 
@@ -73,7 +73,7 @@
                               IsAsync OnConfirm=@(async()=>{await Task.Run(async()=> {await VariableService.InsertTestDataAsync(TestCount);
                               await InvokeAsync(async()=>
                               {
-                              await ToastService.Default(); await table.QueryAsync();
+                              await ToastService.Default(); await InvokeAsync(table.QueryAsync);
                               });
                               await Change();
                               await InvokeAsync(StateHasChanged);
