--- a/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
+++ b/src/ThingsGateway.Admin.Razor/Components/AdminTable.razor
@@ -6,7 +6,7 @@
        IsTree="IsTree" OnTreeExpand="OnTreeExpand!" TreeNodeConverter="TreeNodeConverter!" TreeIcon="fa-solid fa-circle-chevron-right" TreeExpandIcon="fa-solid fa-circle-chevron-right fa-rotate-90" IsAutoQueryFirstRender=IsAutoQueryFirstRender 
        ShowDefaultButtons="ShowDefaultButtons" ShowAdvancedSearch="ShowAdvancedSearch" ShowResetButton=ShowResetButton
        ShowEmpty="ShowEmpty" EmptyText="@EmptyText" EmptyImage="@($"{WebsiteConst.DefaultResourceUrl}images/empty.svg")" SortString="@SortString"
-       OnQueryAsync="OnQueryAsync!" OnDeleteAsync="OnDeleteAsync!" OnSaveAsync="OnSaveAsync!" EditFooterTemplate=EditFooterTemplate
+       OnQueryAsync="OnQueryAsync!" OnDeleteAsync="OnDeleteAsync!" OnSaveAsync="OnSaveAsync!" OnAddAsync="OnAddAsync" EditFooterTemplate=EditFooterTemplate
        ShowSkeleton="true" ShowLoading="ShowLoading" ShowSearch="ShowSearch" SearchModel=@SearchModel ShowLineNo
        SearchMode=SearchMode ShowExportPdfButton=ShowExportPdfButton ExportButtonText=@ExportButtonText 
        ShowExportButton=@ShowExportButton Items=Items ClickToSelect=ClickToSelect ScrollMode=ScrollMode  
@@ -15,7 +15,7 @@
        AllowDragColumn=@AllowDragColumn Height=@Height ShowRefresh=ShowRefresh
        AllowResizing=@AllowResizing ExportButtonDropdownTemplate=ExportButtonDropdownTemplate
        ShowToolbar="ShowToolbar" ClientTableName="@ClientTableName"
-       ShowExtendButtons="ShowExtendButtons"
+       ShowExtendButtons="ShowExtendButtons" 
        ShowAddButton=@(ShowAddButton??AuthorizeButton(AdminOperConst.Add))
        ShowDeleteButton=@(ShowDeleteButton??AuthorizeButton(AdminOperConst.Delete))
        ShowEditButton=@(ShowEditButton??AuthorizeButton(AdminOperConst.Edit))
