--- a/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
@@ -19,15 +19,22 @@
             @* 语言选择 *@
             <CultureChooser />
 
-            @* 主题切换 *@
-            <ThemeToggle />
+
+
+
+            @* 全屏按钮 *@
+            <FullScreenButton class="layout-header-bar d-none d-lg-flex px-2" Icon="fa fa-arrows-alt"
+                              TooltipPlacement=Placement.Bottom TooltipText="@Localizer[nameof(FullScreenButton)]" />
             @if (WebsiteOption.Value.IsShowAbout)
             {
                 <Button @onclick="ShowAbout" class="layout-header-bar d-none d-lg-flex px-2" Icon="fa fa-info" Color="Color.None" TooltipText="@Localizer[nameof(About)]" />
             }
             @* 版本号 *@
-            <div class="px-2 navbar-header-text d-none d-lg-block">@_versionString</div>
+            <div class="px-1 navbar-header-text d-none d-lg-block">@_versionString</div>
 
+            @* 主题切换 *@
+            @* <ThemeToggle /> *@
+            <ThemeProvider class="layout-header-bar d-none d-lg-flex px-0"></ThemeProvider>
 
         </Header>
         <Side>
