refactor: 更新依赖项

--- a/src/ThingsGateway.Gateway.Razor/Pages/Runtime/RealAlarmPage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Runtime/RealAlarmPage.razor
@@ -17,17 +17,17 @@
                 OnQueryAsync="OnQueryAsync" IsPagination=true>
 
         <TableColumns>
-            <TableColumn @bind-Field="@context.DeviceName" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.Name" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.Description" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.DataType" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.AlarmTime" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.AlarmCode" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.AlarmLimit" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.AlarmText" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.AlarmType" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.EventTime" Filterable Sortable Visible />
-            <TableColumn @bind-Field="@context.EventType" Filterable Sortable Visible />
+            <TableColumn @bind-Field="@context.DeviceName" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.Name" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.Description" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.DataType" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.AlarmTime" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.AlarmCode" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.AlarmLimit" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.AlarmText" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.AlarmType" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.EventTime" Filterable=true Sortable=true Visible=true />
+            <TableColumn @bind-Field="@context.EventType" Filterable=true Sortable=true Visible=true />
 
 @* 
             <TableColumn @bind-Field="@context.DeviceId" Filterable Sortable="false" Visible="false" />
