--- a/src/ThingsGateway.Razor/Components/EditorForm/EditorFormObject.razor.css
+++ b/src/ThingsGateway.Razor/Components/EditorForm/EditorFormObject.razor.css
@@ -1,7 +1,8 @@
 ﻿.bb-editor {
     position: relative;
+}
 
-    .ef-loading {
+    .bb-editor .ef-loading {
         position: absolute;
         top: 0;
         left: 0;
@@ -10,7 +11,6 @@
         background-color: var(--bs-body-bg);
     }
 
-    .bb-editor-footer {
-        margin-top: 1rem;
-    }
+.bb-editor-footer {
+    margin-top: 1rem;
 }
