--- a/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
@@ -14,6 +14,7 @@
             UseTabSet="false" TabDefaultUrl="/">
         <Header>
 
+            <div class="flex-fill"></div>
             @* 搜索框 *@
             <GlobalSearch Menus=@(MenuService.SameLevelMenuItems) />
             @* 语言选择 *@
