feat: startup适配移动平台

--- a/src/ThingsGateway.Gateway.Razor/MainLayout.razor
+++ b/src/ThingsGateway.Gateway.Razor/MainLayout.razor
@@ -23,7 +23,9 @@
                     <GlobalSearch Menus=@(MenuService.SameLevelMenuItems) />
 
                     @* 语言选择 *@
-                    <CultureChooser />
+                    <div class="d-none d-xl-flex ">
+                        <CultureChooser />
+                    </div>
 
 
 
