--- a/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/MainLayout.razor
@@ -18,7 +18,10 @@
             @* 搜索框 *@
             <GlobalSearch Menus=@(MenuService.SameLevelMenuItems) />
             @* 语言选择 *@
-            <CultureChooser />
+
+            <div class="d-none d-xl-flex ">
+                <CultureChooser />
+            </div>
 
 
 
