--- a/src/tools/ThingsGateway.Foundation.Razor/DebugPages/LogConsole.razor
+++ b/src/tools/ThingsGateway.Foundation.Razor/DebugPages/LogConsole.razor
@@ -11,7 +11,7 @@
         <div class="flex-fill">
         </div>
         <Button Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@(IsPause?"fa fa-play":"fa fa-pause") OnClick="Pause" />
-        <Button IsAsync Color="Color.None" style="color: var(--bs-card-title-color);"  Icon=@("fa fa-sign-out") OnClick="HandleOnExportClick" />
+        <Button IsAsync Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("fa fa-sign-out") OnClick="HandleOnExportClick" />
         <Button IsAsync Color="Color.None" style="color: var(--bs-card-title-color);" Icon=@("far fa-trash-alt") OnClick="Delete" />
 
     </HeaderTemplate>
@@ -19,14 +19,15 @@
         <div style=@($"height:{HeightText};overflow-y:scroll")>
             <Virtualize Items="CurrentMessages??new  List<LogMessage>()" Context="itemMessage" ItemSize="60" OverscanCount=2>
                 <ItemContent>
-                    <div title=@itemMessage.Message.Substring(0, Math.Min(itemMessage.Message.Length, 500))
-                         class=@(itemMessage.Level<(byte)Microsoft.Extensions.Logging.LogLevel.Information?"":
-                         itemMessage.Level>=(byte)Microsoft.Extensions.Logging.LogLevel.Warning? " red--text ":"green--text ")
-                         style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;">
+                    <Tooltip Placement="Placement.Bottom" Title=@itemMessage.Message.Substring(0, Math.Min(itemMessage.Message.Length, 500))>
+                        <div class=@(itemMessage.Level<(byte)Microsoft.Extensions.Logging.LogLevel.Information?"":
+                             itemMessage.Level>=(byte)Microsoft.Extensions.Logging.LogLevel.Warning? " red--text ":"green--text ")
+                             style="white-space: nowrap !important;overflow: hidden !important; text-overflow: ellipsis !important;">
 
-                        @itemMessage.Message.Substring(0, Math.Min(itemMessage.Message.Length, 150))
+                            @itemMessage.Message.Substring(0, Math.Min(itemMessage.Message.Length, 150))
 
-                    </div>
+                        </div>
+                    </Tooltip>
                 </ItemContent>
             </Virtualize>
         </div>
