--- a/src/tools/ThingsGateway.Razor/Components/CultureChooser.razor
+++ b/src/tools/ThingsGateway.Razor/Components/CultureChooser.razor
@@ -1,6 +1,6 @@
 ﻿@inherits BootstrapComponentBase
 @namespace ThingsGateway.Razor
-<div class="d-none d-xl-flex flex-xl-fill flex-xl-grow-0 justify-content-xl-end px-2"> 
+<div class="flex-xl-fill flex-xl-grow-0 justify-content-xl-end px-2"> 
     <Select Value="@SelectedCulture" OnSelectedItemChanged="@SetCulture" IsPopover>
         <Options>
             @foreach (var kv in BootstrapOptions.CurrentValue.GetSupportedCultures())
