--- a/src/ThingsGateway.Photino/Routes.razor
+++ b/src/ThingsGateway.Photino/Routes.razor
@@ -1,6 +1,6 @@
 ﻿@using ThingsGateway.Admin.Application
 
-
+<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Routes).Assembly" AdditionalAssemblies="NetCoreApp.RazorAssemblies">
     <Found Context="routeData">
         @{
@@ -23,5 +23,5 @@
         </NotFound>
 </Router>
 
-
+</CascadingAuthenticationState>
 
