fix: 修复上一提交导致的字典服务错误

--- a/src/ThingsGateway.Admin.Razor/Pages/SysDictPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/SysDictPage.razor
@@ -10,7 +10,7 @@
                   AllowResizing="true" IsFixedHeader=true IsMultipleSelect=true SearchModel=SearchModel 
                   ShowExtendButtons=true
                 OnQueryAsync="OnQueryAsync" IsPagination=true
-                OnSaveAsync="SysDictService.SaveDictAsync" OnDeleteAsync="@(a=>SysDictService.DeleteDictAsync(a.Select(a=>a.Id)))">
+                OnSaveAsync="SaveDictAsync" OnDeleteAsync="@(a=>DeleteDictAsync(a.Select(a=>a.Id)))">
 
 </AdminTable>
 </div>
