refactor: 默认的登录页路径设置

--- a/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
+++ b/src/ThingsGateway.Admin.Razor/Layout/MainLayout.razor
@@ -78,7 +78,7 @@
 
                 </Main>
                 <NotAuthorized>
-                    <Redirect />
+                    <Redirect Url="/Account/Login"/>
                 </NotAuthorized>
             </Layout>
 
