--- a/src/ThingsGateway.Gateway.Razor/MainLayout.razor
+++ b/src/ThingsGateway.Gateway.Razor/MainLayout.razor
@@ -73,7 +73,7 @@
 
                 </Main>
                 <NotAuthorized>
-                    <Redirect/>
+                    <Redirect Url="/Account/Login"/>
                 </NotAuthorized>
             </Layout>
 
